grammarDKNParser.py
# Generated from grammarDKN.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class grammarDKNParser ( Parser ):

    grammarFileName = "grammarDKN.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "';'", "'if'", "'('", "')'", "'{'", "'}'", 
                     "'for'", "'while'", "'+'", "'-'", "'*'", "'/'", "'%'", 
                     "'^'", "'sin'", "'cos'", "'tan'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "NUMBER", "VARIABLE", "WS" ]

    RULE_program = 0
    RULE_statement = 1
    RULE_expr = 2

    ruleNames =  [ "program", "statement", "expr" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    NUMBER=18
    VARIABLE=19
    WS=20

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(grammarDKNParser.StatementContext)
            else:
                return self.getTypedRuleContext(grammarDKNParser.StatementContext,i)


        def getRuleIndex(self):
            return grammarDKNParser.RULE_program

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = grammarDKNParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 7 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 6
                self.statement()
                self.state = 9 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & 1016204) != 0)):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(grammarDKNParser.ExprContext)
            else:
                return self.getTypedRuleContext(grammarDKNParser.ExprContext,i)


        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(grammarDKNParser.StatementContext)
            else:
                return self.getTypedRuleContext(grammarDKNParser.StatementContext,i)


        def getRuleIndex(self):
            return grammarDKNParser.RULE_statement

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement" ):
                return visitor.visitStatement(self)
            else:
                return visitor.visitChildren(self)




    def statement(self):

        localctx = grammarDKNParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_statement)
        self._la = 0 # Token type
        try:
            self.state = 54
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [3, 15, 16, 17, 18, 19]:
                self.enterOuterAlt(localctx, 1)
                self.state = 11
                self.expr(0)
                self.state = 12
                self.match(grammarDKNParser.T__0)
                pass
            elif token in [2]:
                self.enterOuterAlt(localctx, 2)
                self.state = 14
                self.match(grammarDKNParser.T__1)
                self.state = 15
                self.match(grammarDKNParser.T__2)
                self.state = 16
                self.expr(0)
                self.state = 17
                self.match(grammarDKNParser.T__3)
                self.state = 18
                self.match(grammarDKNParser.T__4)
                self.state = 20 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while True:
                    self.state = 19
                    self.statement()
                    self.state = 22 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & 1016204) != 0)):
                        break

                self.state = 24
                self.match(grammarDKNParser.T__5)
                pass
            elif token in [7]:
                self.enterOuterAlt(localctx, 3)
                self.state = 26
                self.match(grammarDKNParser.T__6)
                self.state = 27
                self.match(grammarDKNParser.T__2)
                self.state = 28
                self.expr(0)
                self.state = 29
                self.match(grammarDKNParser.T__0)
                self.state = 30
                self.expr(0)
                self.state = 31
                self.match(grammarDKNParser.T__0)
                self.state = 32
                self.expr(0)
                self.state = 33
                self.match(grammarDKNParser.T__3)
                self.state = 34
                self.match(grammarDKNParser.T__4)
                self.state = 36 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while True:
                    self.state = 35
                    self.statement()
                    self.state = 38 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & 1016204) != 0)):
                        break

                self.state = 40
                self.match(grammarDKNParser.T__5)
                pass
            elif token in [8]:
                self.enterOuterAlt(localctx, 4)
                self.state = 42
                self.match(grammarDKNParser.T__7)
                self.state = 43
                self.match(grammarDKNParser.T__2)
                self.state = 44
                self.expr(0)
                self.state = 45
                self.match(grammarDKNParser.T__3)
                self.state = 46
                self.match(grammarDKNParser.T__4)
                self.state = 48 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while True:
                    self.state = 47
                    self.statement()
                    self.state = 50 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & 1016204) != 0)):
                        break

                self.state = 52
                self.match(grammarDKNParser.T__5)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(grammarDKNParser.ExprContext)
            else:
                return self.getTypedRuleContext(grammarDKNParser.ExprContext,i)


        def NUMBER(self):
            return self.getToken(grammarDKNParser.NUMBER, 0)

        def VARIABLE(self):
            return self.getToken(grammarDKNParser.VARIABLE, 0)

        def getRuleIndex(self):
            return grammarDKNParser.RULE_expr

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpr" ):
                return visitor.visitExpr(self)
            else:
                return visitor.visitChildren(self)



    def expr(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = grammarDKNParser.ExprContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 4
        self.enterRecursionRule(localctx, 4, self.RULE_expr, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 78
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [15]:
                self.state = 57
                self.match(grammarDKNParser.T__14)
                self.state = 58
                self.match(grammarDKNParser.T__2)
                self.state = 59
                self.expr(0)
                self.state = 60
                self.match(grammarDKNParser.T__3)
                pass
            elif token in [16]:
                self.state = 62
                self.match(grammarDKNParser.T__15)
                self.state = 63
                self.match(grammarDKNParser.T__2)
                self.state = 64
                self.expr(0)
                self.state = 65
                self.match(grammarDKNParser.T__3)
                pass
            elif token in [17]:
                self.state = 67
                self.match(grammarDKNParser.T__16)
                self.state = 68
                self.match(grammarDKNParser.T__2)
                self.state = 69
                self.expr(0)
                self.state = 70
                self.match(grammarDKNParser.T__3)
                pass
            elif token in [18]:
                self.state = 72
                self.match(grammarDKNParser.NUMBER)
                pass
            elif token in [19]:
                self.state = 73
                self.match(grammarDKNParser.VARIABLE)
                pass
            elif token in [3]:
                self.state = 74
                self.match(grammarDKNParser.T__2)
                self.state = 75
                self.expr(0)
                self.state = 76
                self.match(grammarDKNParser.T__3)
                pass
            else:
                raise NoViableAltException(self)

            self._ctx.stop = self._input.LT(-1)
            self.state = 100
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,7,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 98
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
                    if la_ == 1:
                        localctx = grammarDKNParser.ExprContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 80
                        if not self.precpred(self._ctx, 12):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 12)")
                        self.state = 81
                        self.match(grammarDKNParser.T__8)
                        self.state = 82
                        self.expr(13)
                        pass

                    elif la_ == 2:
                        localctx = grammarDKNParser.ExprContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 83
                        if not self.precpred(self._ctx, 11):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 11)")
                        self.state = 84
                        self.match(grammarDKNParser.T__9)
                        self.state = 85
                        self.expr(12)
                        pass

                    elif la_ == 3:
                        localctx = grammarDKNParser.ExprContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 86
                        if not self.precpred(self._ctx, 10):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 10)")
                        self.state = 87
                        self.match(grammarDKNParser.T__10)
                        self.state = 88
                        self.expr(11)
                        pass

                    elif la_ == 4:
                        localctx = grammarDKNParser.ExprContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 89
                        if not self.precpred(self._ctx, 9):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 9)")
                        self.state = 90
                        self.match(grammarDKNParser.T__11)
                        self.state = 91
                        self.expr(10)
                        pass

                    elif la_ == 5:
                        localctx = grammarDKNParser.ExprContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 92
                        if not self.precpred(self._ctx, 8):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 8)")
                        self.state = 93
                        self.match(grammarDKNParser.T__12)
                        self.state = 94
                        self.expr(9)
                        pass

                    elif la_ == 6:
                        localctx = grammarDKNParser.ExprContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 95
                        if not self.precpred(self._ctx, 7):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 7)")
                        self.state = 96
                        self.match(grammarDKNParser.T__13)
                        self.state = 97
                        self.expr(8)
                        pass

             
                self.state = 102
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,7,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx



    def sempred(self, localctx:RuleContext, ruleIndex:int, predIndex:int):
        if self._predicates == None:
            self._predicates = dict()
        self._predicates[2] = self.expr_sempred
        pred = self._predicates.get(ruleIndex, None)
        if pred is None:
            raise Exception("No predicate with index:" + str(ruleIndex))
        else:
            return pred(localctx, predIndex)

    def expr_sempred(self, localctx:ExprContext, predIndex:int):
            if predIndex == 0:
                return self.precpred(self._ctx, 12)
         

            if predIndex == 1:
                return self.precpred(self._ctx, 11)
         

            if predIndex == 2:
                return self.precpred(self._ctx, 10)
         

            if predIndex == 3:
                return self.precpred(self._ctx, 9)
         

            if predIndex == 4:
                return self.precpred(self._ctx, 8)
         

            if predIndex == 5:
                return self.precpred(self._ctx, 7)
         




